@@ -1,0 +1,24 @@
+use ExtUtils::MakeMaker;
+
+# See lib/ExtUtils/MakeMaker.pm for details of how to influence
+# the contents of the Makefile that is written.
+
+WriteMakefile(
+	'NAME'		=> 'Games::Irrlicht',
+	'VERSION_FROM'	=> 'lib/Games/Irrlicht.pm',
+	'PREREQ_PM'	=> {
+			 Config::Simple => '4.55',
+			},
+	($] >= 5.005 ?
+		(ABSTRACT_FROM  => 'lib/Games/Irrlicht.pm',
+                AUTHOR         => 'Tels <http://bloodgate.com/>') : ()),
+	'CC'		=> 'g++',
+	'LD'		=> 'g++',
+	'LIBS'		=> [ '-lIrrlicht -lgdi32 -lglu32 -lopengl32 -ljpeg -lz' ],
+
+	'OPTIMIZE'	=> '-O2',
+	'DEFINE'	=> '', # e.g., '-DHAVE_SOMETHING'
+	'INC'		=> '',
+# makes no difference?
+	'XSOPT'		=> '-C++', 
+);
