@@ -1,14 +1,14 @@
 #!/usr/bin/perl -w
 
-use Test::More tests => 7;
+use Test::More tests => 10;
 use strict;
 
 BEGIN
   {
   $| = 1;
   use blib;
-  use lib '../blib/lib';
-  use lib '../blib/arch';
+  unshift @INC, '../lib';
+  unshift @INC, '../blib/arch';
   chdir 't' if -d 't';
   use_ok ('Games::Irrlicht');
   }
@@ -30,7 +30,7 @@ my $app = Games::Irrlicht->new( disable_log => 1 );
 is (ref($app), 'Games::Irrlicht');
 
 my $i = 0;
-while ($i++ < 70)
+while ($i++ < 2)
   {
   $app->_next_frame();
   }
@@ -41,6 +41,8 @@ while ($i++ < 70)
 my $device = $app->getIrrlichtDevice();
 
 is ($device->setVisible(0), undef, 'set cursor to invisible');
+is (($device->getVersion() + 0) >= 0.6, 1, 'getVersion() >= 0.6');
+is ($device->isWindowActive(), 1, 'window is active');
 
 #############################################################################
 # VideoDriver
@@ -57,6 +59,16 @@ my $filesystem = $app->getFileSystem();
 is ($filesystem->addZipFileArchive('media/test.zip'), 1,
   'Could add zip file');
 
+# TODO: does not work in Irrlicht v0.6 in Linux (segfault due to Irrlicht bug)
+#is ($filesystem->getWorkingDirectory(), '',
+#  'get pwd');
+
+# TODO: these fail under Linux?
+#is ($filesystem->changeWorkingDirectoryTo('media'), 1,
+#  'Could change dir to media');
+#is ($filesystem->changeWorkingDirectoryTo('..'), 1,
+#  'Could change dir back');
+
 #############################################################################
 # SzeneManager
 
@@ -69,4 +81,20 @@ is ($szmgr->addCameraSceneNodeFPS(), 1,
 # GUIEnvironment
 
 my $gui = $app->getGUIEnvironment();
+
+#############################################################################
+# OSOperator
+
+my $os = $app->getOSOperator();
+
+if ($^O =~ /linux/)
+  {
+  is ($os->getOperationSystemVersion(), 'Linux', 'getOSVersion()'); 
+  }
+else
+  {
+  # on every other system, check that it returns a non-empty string
+  is (length($os->getOperationSystemVersion()) != 0, 1, 'getOSVersion()'); 
+  }
+
 
